add mentoring info page and link on host page. refs #286

--- a/host.html
+++ b/host.html
@@ -65,6 +65,7 @@
             <li data-i18n="host-recommendation-list-4">Adopt a code of conduct for the event to help create a safe space and to minimize potential harassment scenarios (<a href="http://confcodeofconduct.com/">here's a ready-made one</a>)</li>
             <li data-i18n="host-recommendation-list-5">If you are unsure if your venue has adequate WiFi capacity then have an offline plan (e.g. thumbdrives)</li>
             <li data-i18n="host-recommendation-list-6">If needed reach out to local software companies etc and ask for donations of space, wifi, food and drinks</li>
+            <li data-i18n="host-recommendation-list-7">In case possible mentors feel unsure, send them the link to the <a href="/mentor-at-event.html">mentoring info page</a> </li>
           </ul>
         </div>
       </div>
